--- a/html_css/responsive_design/index.html
+++ b/html_css/responsive_design/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Vijay Velagapudi</title>
+		<title>Stephanie Snipes</title>
 		<!-- Load stylesheets based on viewport  -->
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<link rel="stylesheet" type="text/css" media="(max-width: 667px)" href="small.css">
@@ -16,7 +16,7 @@
 
 	<body>
 		<header>
-			<h1 id="site-title">Vijay Velagapudi</h1>
+			<h1 id="site-title">Stephanie Snipes</h1>
 			<nav id="navigation">
 				<a class="nav-button" href="#">Home</a>
 				<a class="nav-button" href="#projects">Projects</a>
@@ -49,7 +49,7 @@
 		</div>
 
 		<footer>
-			<span>Contact me: vijayv@berkeley.edu</span>
+			<span>Contact me: ssnipes@berkeley.edu</span>
 		</footer>
 	</body>
 </html>
